--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/scamgi/ls#readme",
   "devDependencies": {
+    "@types/lodash": "^4.14.149",
     "@types/node": "^13.11.1",
     "typescript": "^3.8.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "lodash": "^4.17.15"
+  }
 }
