--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "homepage": "https://github.com/scamgi/ls#readme",
   "devDependencies": {
+    "@types/glob": "^7.1.1",
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.11.1",
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "glob": "^7.1.6",
     "lodash": "^4.17.15"
   }
 }
