--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/scamgi/ls#readme",
   "devDependencies": {
+    "@types/colors": "^1.2.1",
     "@types/glob": "^7.1.1",
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.11.1",
@@ -27,6 +28,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "colors": "^1.4.0",
     "glob": "^7.1.6",
     "lodash": "^4.17.15"
   }
